fix alignement

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@ button {
   cursor: pointer;
   font-size: 100px;
   font-weight: 500;
+  width: 50px;
 }
 
 .reset {
